Release v1.0.2+26.3